evaluation/test_suite/negative/ub11/1.c
#include <stdio.h>
int main()
{
    int x = 0;
    printf("%d\n", x + 1);
}
